app/src/test/resources/programs/valid/separator/valueOfFunctions.extension
foo main() -> Int = {
   // Since function definition is a statement clearly it is also an expression
   // The program should return 2 since function declaration always evaluates to Nope type ()
   if foo f() -> Bool = true then 1 else 2
}