app/src/test/resources/programs/invalid/separator/variableDeclaration.extension
foo main() -> Int = {
    // Value of variable declaration is always Nope type which is in conflict with main returned type
    let x: Int = 42
}